logs/django-kitsune.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/django_kitsune-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/kitsune'...
Compiling './lib/python3.5/site-packages/kitsune/base.py'...
***   File "./lib/python3.5/site-packages/kitsune/base.py", line 36
    print self.status_message,
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kitsune/html2text.py'...
***   File "./lib/python3.5/site-packages/kitsune/html2text.py", line 279
    self.o("][" + `a['count']` + "]")
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kitsune/management'...
Listing './lib/python3.5/site-packages/kitsune/management/commands'...
Compiling './lib/python3.5/site-packages/kitsune/management/commands/kitsune_cronserver.py'...
***   File "./lib/python3.5/site-packages/kitsune/management/commands/kitsune_cronserver.py", line 24
    print "Starting cronserver.  Jobs will run every %d seconds." % t_wait
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kitsune/migrations'...
Compiling './lib/python3.5/site-packages/kitsune/models.py'...
***   File "./lib/python3.5/site-packages/kitsune/models.py", line 312
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kitsune/scripts.py'...
***   File "./lib/python3.5/site-packages/kitsune/scripts.py", line 24
    print "\n",res.command,"\nRET CODE:\t",res.returncode,"\nOUT:\t\t",res.output,"\nERR:\t\t",res.error
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kitsune/templates'...
Listing './lib/python3.5/site-packages/kitsune/templates/admin'...
Listing './lib/python3.5/site-packages/kitsune/templates/admin/kitsune'...
Listing './lib/python3.5/site-packages/kitsune/templates/admin/kitsune/job'...
Listing './lib/python3.5/site-packages/kitsune/templates/admin/kitsune/log'...
Listing './lib/python3.5/site-packages/kitsune/templates/kitsune'...
Listing './lib/python3.5/site-packages/kitsune/templatetags'...
Compiling './lib/python3.5/site-packages/kitsune/templatetags/kitsune_tags.py'...
***   File "./lib/python3.5/site-packages/kitsune/templatetags/kitsune_tags.py", line 33
    raise template.TemplateSyntaxError, "%r tag requires one argument" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
